Closed Bug 17287 Opened 25 years ago Closed 25 years ago

Forward:in today's build after getting a forwarded message i see "8" on top of the message body

Categories

(SeaMonkey :: MailNews: Message Display, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: marina, Assigned: nhottanscp)

Details

*****observed with 1999-10-26-08-M11 windows build*****
Steps to reproduce:
-compose a message;
-get it and forwar it to yourself;
-get the forwarded message , open it
//note: a digit "8" in the upper left coner (in 4.61 i see two squares and "8")
Assignee: phil → rhp
Reassign to rhp, cc ducarroz
Assignee: rhp → jefft
Jeff,
Can you take a look at this one.

- rhp
OK, I will take a look at it.
Were you using forward message as attachment or inline?
so far, I have discovered that when I send a message without typing anything into the body (typically the case when
you do a forward (by default as attachment), I receive a message with a random body. I think that what marina is
seeing here.
The problem doesn't seem to be in Ender but in MsgCompose.
Yeah, and it looks like a typical buffer overrun problem. Sounds like we are
trying to output the empty message body.
Assignee: jefft → nhotta
Naoki thought this may has something to do with his changes to nsMsgCompose.cpp
couple days ago. Reassign to nhotta for further investigation...
Status: NEW → ASSIGNED
nsISaveAsCharset does not handle empty string input correctly. I am going to fix
it.
Target Milestone: M11
M11, the fix was reviewed, I will check in today or tomorrow.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Fix checked in.
Status: RESOLVED → VERIFIED
Win_nt 4.0 (1999-11-09-11 M11)
This problem has been fixed.
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.