Check input for the null pointer and empty string, bug 17287, r=ducarroz,jefft.